--- a/UITableView_NoSection/UITableView_NoSection/DisneyCharacterList.plist
+++ b/UITableView_NoSection/UITableView_NoSection/DisneyCharacterList.plist
@@ -6,13 +6,19 @@
 		<key>Image</key>
 		<string>0.MickeyIcon</string>
 		<key>Name</key>
-		<string>Mickey</string>
+		<string>Mickey
+Mouse</string>
 	</dict>
 	<dict>
 		<key>Image</key>
 		<string>1.MinnieIcon</string>
 		<key>Name</key>
-		<string>Minnie</string>
+		<string>M
+i
+n
+n
+i
+e</string>
 	</dict>
 	<dict>
 		<key>Image</key>
