セル内可変の設定

--- a/UITableView_NoSection/UITableView_NoSection/DisneyCharacterList.plist
+++ b/UITableView_NoSection/UITableView_NoSection/DisneyCharacterList.plist
@@ -13,12 +13,8 @@ Mouse</string>
 		<key>Image</key>
 		<string>1.MinnieIcon</string>
 		<key>Name</key>
-		<string>M
-i
-n
-n
-i
-e</string>
+		<string>Minnie
+Mouse</string>
 	</dict>
 	<dict>
 		<key>Image</key>
